--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
         "ts-helpers": "1.1.2",
         "zone.js": "0.6.26",
         "chart.js": "2.3.0",
+        "ng2-nvd3": "1.1.3",
+        "ng2-vis": "0.0.5",
+        "nvd3": "1.8.5",
+        "ng2-bs3-modal": "0.10.4",
         "ng2-bootstrap": "1.1.16",
         "ng2-charts": "1.4.1",
+        "vis": "4.17.0",
         "moment": "2.15.2"
     },
     "devDependencies": {
