Bash for demo run added

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     },
     "angular-cli": { },
     "scripts": {
-        "start": "ng serve",
+        "start": "ng serve --port 9005",
         "lint": "tslint \"src/**/*.ts\"",
         "test": "ng test",
         "pree2e": "webdriver-manager update",
