--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "start": "ng serve --port 9005",
         "lint": "tslint \"src/**/*.ts\"",
         "test": "ng test",
+        "build": "ng build",
         "pree2e": "webdriver-manager update",
         "e2e": "protractor"
     },
