--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "rougue-board",
+  "name": "picaso-clinician-dashboard-ui",
   "version": "0.1.0",
-  "description": "Web-based dashboard based upon CoreUI",
+  "description": "PICASO Clinician Dashboard",
   "author": {
-    "name": "Web Compliance Center",
-    "email": "webcc@fit.fraunhofer.de"
+    "name": "PICASO Project",
+    "email": ""
   },
   "homepage": "https://imergo.com/solutions/opensource.html",
   "license": "Apache-2.0",
@@ -31,12 +31,20 @@
     "ng2-charts": "1.4.1",
     "rxjs": "5.0.0-rc.1",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.6.26"
+    "uuid": "^3.0.1",
+    "zone.js": "0.6.26",
+    "ng2-bs3-modal" : "0.10.4",
+    "ng2-nvd3" : "1.1.3",
+    "ng2-vis" : "0.0.5",
+    "vis" : "4.17.0",
+    "nvd3" : "1.8.5",
+    "mydaterangepicker" : "^1.4.3"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.37",
     "angular-cli": "1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.3",
+    "jasmine": "^2.5.3",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
     "karma": "1.3.0",
