--- a/package.json
+++ b/package.json
@@ -23,23 +23,26 @@
     "@angular/platform-browser-dynamic": "2.1.2",
     "@angular/router": "3.1.2",
     "@angular/upgrade": "2.1.2",
+    "ag-grid": "7.2.2",
+    "ag-grid-ng2": "7.2.2",
+    "angular-progress-http": "^0.4.1",
+    "angular2-datatable": "^0.6.0",
     "angular2-uuid": "^1.1.1",
     "chart.js": "2.3.0",
     "core-js": "2.4.1",
     "moment": "2.15.2",
+    "mydaterangepicker": "^1.4.3",
     "ng2-bootstrap": "1.1.16",
+    "ng2-bs3-modal": "0.10.4",
     "ng2-charts": "1.4.1",
+    "ng2-nvd3": "1.1.3",
+    "ng2-vis": "0.0.5",
+    "nvd3": "1.8.5",
     "rxjs": "5.0.0-rc.1",
     "ts-helpers": "1.1.2",
     "uuid": "^3.0.1",
-    "zone.js": "0.6.26",
-    "ng2-bs3-modal": "0.10.4",
-    "ng2-nvd3": "1.1.3",
-    "ng2-vis": "0.0.5",
     "vis": "4.17.0",
-    "nvd3": "1.8.5",
-    "mydaterangepicker": "^1.4.3",
-    "angular-progress-http": "^0.4.1"
+    "zone.js": "0.6.26"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.37",
