--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.4.9",
-    "@angular/compiler": "2.4.9",
-    "@angular/core": "2.4.9",
-    "@angular/forms": "2.4.9",
-    "@angular/http": "2.4.9",
-    "@angular/platform-browser": "2.4.9",
-    "@angular/platform-browser-dynamic": "2.4.9",
-    "@angular/router": "3.4.9",
+    "@angular/animations": "^4.1.2",
+    "@angular/common": "^4.1.2",
+    "@angular/compiler": "^4.1.2",
+    "@angular/compiler-cli": "^4.1.2",
+    "@angular/core": "^4.1.2",
+    "@angular/forms": "^4.1.2",
+    "@angular/http": "^4.1.2",
+    "@angular/platform-browser": "^4.1.2",
+    "@angular/platform-browser-dynamic": "^4.1.2",
+    "@angular/platform-server": "^4.1.2",
+    "@angular/router": "^4.1.2",
     "@angular/upgrade": "2.4.9",
     "angular-progress-http": "^0.5.0",
     "angular2-datatable": "^0.6.0",
@@ -49,6 +52,7 @@
     "nvd3": "1.8.5",
     "rxjs": "5.2.0",
     "ts-helpers": "1.1.2",
+    "typescript": "^2.3.2",
     "uuid": "^3.0.1",
     "vis": "4.17.0",
     "zone.js": "0.6.26"
