--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ng2-bs3-modal": "^0.10.4",
     "ng2-charts": "1.4.1",
     "ng2-nvd3": "1.1.3",
+    "ng2-smart-table": "^1.2.1",
     "ng2-vis": "0.0.6",
     "ngx-bootstrap": "^1.6.6",
     "nvd3": "1.8.5",
