--- a/package.json
+++ b/package.json
@@ -18,62 +18,72 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.2",
-    "@angular/common": "^4.1.2",
-    "@angular/compiler": "^4.1.2",
-    "@angular/compiler-cli": "^4.1.2",
-    "@angular/core": "^4.1.2",
-    "@angular/forms": "^4.1.2",
-    "@angular/http": "^4.1.2",
-    "@angular/platform-browser": "^4.1.2",
-    "@angular/platform-browser-dynamic": "^4.1.2",
-    "@angular/platform-server": "^4.1.2",
-    "@angular/router": "^4.1.2",
-    "@angular/upgrade": "2.4.9",
+    "@angular/animations": "^4.2.2",
+    "@angular/common": "^4.2.5",
+    "@angular/compiler": "^4.2.5",
+    "@angular/core": "^4.2.5",
+    "@angular/forms": "^4.2.5",
+    "@angular/http": "^4.2.5",
+    "@angular/platform-browser": "^4.2.5",
+    "@angular/platform-browser-dynamic": "^4.2.5",
+    "@angular/platform-server": "^4.2.2",
+    "@angular/router": "^4.2.5",
+    "@angular/upgrade": "^4.2.5",
+    "@types/chai": "^4.0.0",
+    "@types/mocha": "^2.2.41",
     "angular-progress-http": "^0.5.0",
     "angular2-datatable": "^0.6.0",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^3.3.7",
-    "chart.js": "2.5.0",
+    "chart.js": "^2.6.0",
     "core-js": "2.4.1",
-    "moment": "2.15.2",
+    "moment": "^2.18.1",
     "mydaterangepicker": "^1.4.3",
     "ng2-bs3-modal": "^0.10.4",
-    "ng2-charts": "1.4.1",
+    "ng2-charts": "^1.6.0",
     "ng2-nvd3": "1.1.3",
-    "ng2-vis": "0.0.6",
-    "ngx-bootstrap": "^1.6.6",
+    "ng2-vis": "0.0.5",
+    "ngx-bootstrap": "1.7.1",
+    "ngx-logger": "^0.1.6",
     "nvd3": "1.8.5",
-    "rxjs": "5.2.0",
+    "rxjs": "^5.4.1",
     "ts-helpers": "1.1.2",
-    "typescript": "^2.3.2",
+    "tsc": "^1.20150623.0",
     "uuid": "^3.0.1",
     "vis": "4.17.0",
-    "zone.js": "0.6.26"
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.1",
-    "@angular/compiler-cli": "2.4.9",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "7.0.8",
-    "codelyzer": "2.0.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.5.0",
-    "karma-chrome-launcher": "2.0.0",
+    "@angular/cli": "1.2.0",
+    "@angular/compiler-cli": "4.2.5",
+    "@types/jasmine": "2.5.53",
+    "@types/node": "8.0.7",
+    "chai": "^4.0.2",
+    "code-point-at": "^1.1.0",
+    "codelyzer": "3.1.1",
+    "jasmine-core": "2.6.4",
+    "jasmine-spec-reporter": "4.1.1",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-coverage-istanbul-reporter": "0.3.0",
-    "protractor": "5.1.1",
-    "ts-node": "2.1.0",
-    "tslint": "4.5.1",
-    "typescript": "2.2.1"
+    "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
+    "protractor": "5.1.2",
+    "querystringify": "^1.0.0",
+    "ts-jest": "^20.0.6",
+    "ts-node": "3.1.0",
+    "tslint": "5.4.3",
+    "typescript": "2.4.0",
+    "webpack": "^3.4.1"
   }
 }
