--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,13 +5,18 @@
     "experimentalDecorators": true,
     "lib": ["es6", "dom"],
     "mapRoot": "./",
-    "module": "es6",
+    "module": "es5",
     "moduleResolution": "node",
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
     "target": "es6",
     "typeRoots": [
       "../node_modules/@types"
+    ],
+    // types option has been previously configured
+    "types": [
+      // add node as an option
+      "node"
     ]
   }
 }
