--- a/package.json
+++ b/package.json
@@ -35,28 +35,29 @@
     "@angular/platform-browser-dynamic": "^4.1.2",
     "@angular/platform-server": "^4.1.2",
     "@angular/router": "^4.1.2",
-    "@angular/upgrade": "2.4.9",
+    "@angular/upgrade": "^2.4.9",
     "angular-progress-http": "^0.5.0",
     "angular2-datatable": "^0.6.0",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^3.3.7",
-    "chart.js": "2.5.0",
-    "core-js": "2.4.1",
-    "moment": "2.15.2",
+    "chart.js": "^2.5.0",
+    "core-js": "^2.4.1",
+    "moment": "^2.15.2",
     "mydaterangepicker": "^1.4.3",
     "ng2-bs3-modal": "^0.10.4",
-    "ng2-charts": "1.4.1",
-    "ng2-nvd3": "1.1.3",
+    "ng2-charts": "^1.4.1",
+    "ng2-nvd3": "^1.1.3",
     "ng2-smart-table": "^1.2.1",
     "ng2-vis": "0.0.6",
     "ngx-bootstrap": "^1.6.6",
+    "ngx-cookie": "^1.0.0",
     "nvd3": "1.8.5",
-    "rxjs": "5.2.0",
+    "rxjs": "^5.2.0",
     "ts-helpers": "1.1.2",
     "typescript": "^2.3.2",
     "uuid": "^3.0.1",
     "vis": "4.20.1",
-    "zone.js": "0.6.26"
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.1",
