--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "mydaterangepicker": "^1.4.3",
     "ng2-bs3-modal": "^0.10.4",
     "ng2-charts": "^1.4.1",
-    "ng2-nvd3": "^1.1.3",
+    "ng2-nvd3": "1.1.3",
     "ng2-smart-table": "^1.2.1",
     "ng2-vis": "0.0.6",
     "ngx-bootstrap": "^1.6.6",
@@ -61,7 +61,7 @@
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.1",
-    "@angular/compiler-cli": "2.4.9",
+    "@angular/compiler-cli": "^4.3.5",
     "@types/jasmine": "2.5.45",
     "@types/node": "7.0.8",
     "codelyzer": "2.0.1",
