--- a/package.json
+++ b/package.json
@@ -42,16 +42,18 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "d3": "3.5.17",
+    "jquery": "^3.2.1",
     "moment": "^2.15.2",
     "mydaterangepicker": "^1.4.3",
     "ng2-bs3-modal": "^0.10.4",
     "ng2-charts": "^1.4.1",
-    "ng2-nvd3": "1.1.3",
+    "ng2-nvd3": "2.0.0",
     "ng2-smart-table": "^1.2.1",
     "ng2-vis": "0.0.6",
     "ngx-bootstrap": "^1.6.6",
     "ngx-cookie": "^1.0.0",
-    "nvd3": "1.8.5",
+    "nvd3": "^1.8.6",
     "rxjs": "^5.2.0",
     "ts-helpers": "1.1.2",
     "typescript": "^2.3.2",
