--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ng2-bs3-modal": "^0.10.4",
     "ng2-charts": "^1.6.0",
     "ng2-nvd3": "1.1.3",
-    "ng2-vis": "0.0.5",
+    "ng2-vis": "0.0.6",
     "ngx-bootstrap": "1.7.1",
     "ngx-logger": "^0.1.6",
     "nvd3": "1.8.5",
@@ -58,7 +58,8 @@
     "tsc": "^1.20150623.0",
     "uuid": "^3.0.1",
     "vis": "4.17.0",
-    "zone.js": "^0.8.12"
+    "zone.js": "^0.8.12",
+    "ngx-cookie": "^1.0.0"
   },
   "devDependencies": {
     "@angular/cli": "1.2.0",
